Update 'v9wvz76l5-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:590c7c7e1c4823e6d5b521e8685bef716f23098b@sha256:afdce82ff893471c33c41c034b69f066df96a352045adca2613d8207bc8c7793

--- a/components/v9wvz76l5-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/v9wvz76l5-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: v9wvz76l5-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:590c7c7e1c4823e6d5b521e8685bef716f23098b@sha256:afdce82ff893471c33c41c034b69f066df96a352045adca2613d8207bc8c7793
+          name: container-image
